--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -166,7 +166,7 @@
     flex-wrap: wrap;
     gap: 50px;
     justify-content: space-between;
-    margin: 46px 0 43px 0;
+    margin: 48px 0 43px 0;       //50px 0
 }
 
 .pricing-item {
@@ -191,6 +191,7 @@
         margin-bottom: 200px;
         font-size: 24px;
         line-height: 45px;  
+        font-weight: 400;
     }
 }
 
@@ -499,7 +500,7 @@ hr {
     }
 
     .banner {
-        padding-top: 249px;
+        padding-top: 248px;   //250px
         
         h2 {
             margin-bottom: 16px;
@@ -524,8 +525,8 @@ hr {
 
         h3 {
             font-size: 16px;
-            font-weight: 400;
             line-height: 1.5;
+            font-weight: 700;
         }
     }
 
